--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,7 @@ version: 0.1
 phases:
   build:
     commands:
+      - yum install zip
       - pip install --ignore-installed -r requirements.txt -t ./src 
       - cd src
       - mkdir -p ../artifacts
