--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,7 @@ phases:
       - cd src
       - mkdir -p ../artifacts
       - zip -r ../artifacts/eclass_for_alexa.zip . &>/dev/null
-      - cd ..
+      - find / | grep eclass_for_alexa
 
 artifacts:
   files:
