--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,10 +1,13 @@
 version: 0.1
 
 phases:
-  build:
+  install:
     commands:
       - apt-get update -y
       - apt-get install -y zip
+
+  build:
+    commands:
       - pip install --ignore-installed -r requirements.txt -t ./src 
       - cd src
       - zip -r ../eclass_for_alexa.zip . &>/dev/null
